--- a/ICCT Interview Presentation.ipynb
+++ b/ICCT Interview Presentation.ipynb
@@ -2620,14 +2620,13 @@
     }
    },
    "source": [
+    "- Meaning of Error (actual - predicted)\n",
     "\n",
-    "- Meaning of Error\n",
+    "Small error: a more accurate model results in fairer assessments.\n",
     "\n",
-    "Small error: the properties will more likely to be valued at what they're worth, resulting to a fairer tax assessments.\n",
+    "Positive error: the property is being undervalued, corresponding to lower relative proporty taxes.\n",
     "\n",
-    "Positive error: the property has a higher predicted sales prices than its actual price, resulting to a lower relative property tax.\n",
-    "\n",
-    "Negative error: vice versa."
+    "Negative error: the property is being overvalued, corresponding to higher relative proporty taxes."
    ]
   },
   {
